# beadando

./: CMakeLists.txt  Makefile  brick.c  brick.h  camera.c  camera.h  draw.c  draw.h  main.c  model.c  model.h
includes/: draw.h  model.h
src/: camera.c  draw.c  main.c  model.c
